# study_project

./: Readme.md
LED/ALL/: led_ALLOFF.cc
LED/P1/: CMakeLists.txt  led1_p1.c
LED_test/: CMakeLists.txt  led.c
MQ1/read/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  re
MQ1/write/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wr
basic_class/: CMakeLists.txt  Led.cpp
basic_class/logic/: CMakeLists.txt  blink.cpp
class/: CMakeLists.txt  Led.h  Makefile  blink.cpp
echo_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  echo.c  program
fstream/: 5gled_out.cc  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  program
fstream/includes/: 5g_led.h  gnss_led.h  pwr_led.h  rwr_led.h  v2x_led.h  wave_led.h
fstream/led/: logic.cc
fstream/led_logic/: CMakeLists.txt  Makefile  cmake_install.cmake  logic.cc  pattern.cc
gps_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
led_failed/: CMakeCache.txt  CMakeLists.txt
led_failed/includes/: pattern3.h
led_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  program
led_test/includes/: 5g_led.h  gnss_led.h  led.h  led_off.h  led_on.h  pattern1.h  pattern2.h  pwr_led.h  v2x_led.h  wave_led.h
led_test/led_logic/: CMakeLists.txt  pattern.cc
led_test/leds/: 5g_led.h  gnss_led.h  pwr_led.h  v2x_led.h  wave_led.h
led_test/logic/: CMakeLIsts.txt  LED_OFF.cc  LED_ON.cc  led.cc  led_off.cc  led_on.cc
led_test/pattern/: CMakeLists.txt  Makefile  cmake_install.cmake  pattern.cc  pattern1.h
mq6/Reader/: CMakeLists.txt  Reader  Reader.c
mq6/Writer/: CMakeCache.txt  CMakeLists.txt  Makefile  Writer  Writer.c  cmake_install.cmake
msg_test/includes/: msg_data.h
msg_test/receiver/: CMakeCache.txt  CMakeLists.txt  receiver.c
msg_test/sender/: CMakeLists.txt  sender.c
msg_test_sucess/receiver/: Makefile
(+11 files in other folders)
